# template-gis

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODEOWNERS  README.md  conda-env-hf-autotrain.yml  conda-env-raster-vision.yml  conda-env-torchgeo.yml  dotenv_config.py
.claude/skills/logo/: make_logo.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  start_autotrain_ui.sh  start_jupyter.sh  start_mlflow.sh
code/: README.md
data/analysis/: README.md
data/raw/: README.md
demo/: README.md
demo/foundation_models/: README.md  pyproject.toml
demo/foundation_models/prithvi/: 0-model_overview.ipynb  1-feature_extraction.ipynb  2-finetuning_segmentation.ipynb
demo/foundation_models/tessera/: 0-what_is_tessera.ipynb  1-fetching_embeddings.ipynb  2-downstream_classification.ipynb
demo/geoai/: README.md  pyproject.toml
demo/geoai/geoai/: 0-overview_and_data.ipynb  1-segmentation_training.ipynb  2-object_detection.ipynb  3-change_detection.ipynb
demo/geochat/: README.md  pyproject.toml
demo/geochat/geochat/: 0-setup_and_model_loading.ipynb  1-visual_question_answering.ipynb  2-scene_classification.ipynb  3-grounded_conversation.ipynb
demo/object_detection/: README.md  pyproject.toml
demo/object_detection/geodeep/: 0-getting_started.ipynb  1-building_detection.ipynb  2-custom_onnx_model.ipynb
demo/object_detection/sahi/: 0-sliced_inference_intro.ipynb  1-small_object_detection.ipynb  2-coco_utilities.ipynb
demo/open_cd/: README.md  pyproject.toml
demo/open_cd/open_cd/: 0-intro_and_install.ipynb  1-levir_cd_dataset.ipynb  2-changer_training.ipynb  3-inference_and_visualization.ipynb
demo/opengeos_tools/: README.md  pyproject.toml
demo/opengeos_tools/samgeo/: 0-getting_started.ipynb  1-automatic_mask_generation.ipynb  2-text_prompted_segmentation.ipynb  3-batch_inference_geotiff.ipynb
demo/raster-vision/: README.md
demo/raster_vision/: pyproject.toml
demo/raster_vision/notebooks/: 1-reading_vector_data.ipynb
demo/raster_vision/notebooks/.ipynb_checkpoints/: 0-reading_raster_data-checkpoint.ipynb
demo/terratorch/: example-1-landslide.ipynb
demo/torch_projects/: README.md  pyproject.toml
demo/torch_projects/terratorch/: example-1-landslide.ipynb  example-2-multitemporalcrop.ipynb  intro.ipynb
demo/torch_projects/torchgeo/: 4-trainers.ipynb  6-earth_surface_water.ipynb  8-custom_raster_dataset.ipynb  9-contribute_datamodule.ipynb  README.md
demo/torchgeo/: 0-getting_started.ipynb  1-transforms.ipynb  2-indices.ipynb  3-pretrained_weights.ipynb  5-cli.ipynb  7-contribute_non_geo_dataset.ipynb
notes/: README.md
other/: README.md
projects/: README.md
