[project]
name = "foundation-models"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "transformers>=4.57.1",
    "accelerate>=1.5.0",
    "torch>=2.4.1",
    "torchvision>=0.19.0",
    "huggingface-hub>=0.24.0",
    "geotessera>=0.8.0",
    "scikit-learn>=1.7.0",
    "geopandas>=1.0.0",
    "rasterio>=1.4.0",
    "rioxarray>=0.17.0",
    "xarray>=2024.0.0",
    "pandas>=2.3.0",
    "peft>=0.14.0",
]
