[project]
name = "geoai-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "geoai-py>=0.37.2",
    "torch>=2.4.1",
    "torchvision>=0.19.0",
    "transformers>=4.57.1",
    "leafmap>=0.57.1",
    "geopandas>=1.0.0",
    "rasterio>=1.4.0",
    "scikit-learn>=1.7.0",
    "scikit-image>=0.25.0",
    "albumentations>=2.0.0",
    "timm>=1.0.0",
]
