[project]
name = "geochat-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "transformers==4.31.0",
    "peft==0.4.0",
    "accelerate==0.21.0",
    "bitsandbytes==0.41.0",
    "sentencepiece==0.1.99",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==0.6.13",
    "pillow>=10.0.0",
    "requests>=2.28.0",
]

[tool.uv.sources]
geochat = { git = "https://github.com/mbzuai-oryx/GeoChat.git" }
