[project]
name = "open-cd-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "mmengine>=0.10.0",
    "mmcv>=2.1.0",
    "mmdet>=3.2.0",
    "mmsegmentation>=1.2.0",
    "openmim>=0.3.9",
    "scipy>=1.15.0",
    "scikit-learn>=1.7.0",
    "albumentations>=2.0.0",
    "open-cd",
]

[tool.uv.sources]
open-cd = { git = "https://github.com/likyoo/open-cd.git", tag = "v1.1.0" }
