[project]
name = "opengeos-tools"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "segment-geospatial>=1.3.2",
    "torch>=2.4.1",
    "torchvision>=0.19.0",
    "leafmap>=0.44.0",
    "geopandas>=1.0.0",
    "rasterio>=1.4.0",
    "huggingface-hub>=0.24.0",
]
